k8s.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prom-addon
  namespace: monitoring
spec:
  rules:
  - host: prom-addon.product.co-mall
    http:
      paths:
      - backend:
          serviceName: prometheus-addon
          servicePort: 80
        path: /testurl
      - backend:
          serviceName: prometheus-addon
          servicePort: 80
        path: /testport
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-addon
  namespace: monitoring
  labels:
    app: myapp
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8000
  selector:
    app: myapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-addon
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: harbor.product.co-mall/paas/prom-jiankong:v2
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8000
        volumeMounts:
        - mountPath: /etc/app
          name: config-volume
      volumes:
      - configMap:
          name: prometheus-addon
        name: config-volume
